--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "16.13.1",
+    "node": "v16.13.1",
     "npm" : "8.1.2"
   },
   "dependencies": {
