--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "eminent2.0",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "v16.13.1",
+    "node": "16.13.1",
     "npm" : "8.1.2"
   },
   "dependencies": {
